--- a/OunoRentApi/appsettings.json
+++ b/OunoRentApi/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "User ID=postgres;Password=Password*123!;Host=localhost;Port=5432;Database=OunoRentDb;"
+  },
+  "JWT": {
+    "Issuer": "YesilGezegenTeknoloji",
+    "Audience": "OunoRentUsers",
+    "Key": "s30HyuwyzZBiQtUBN8bWuFZVyO3SwXyw",
+    "ExpireTime": "10"
   }
 }
