Done : Sliding Expiration

--- a/OunoRentApi/appsettings.json
+++ b/OunoRentApi/appsettings.json
@@ -13,6 +13,7 @@
     "Issuer": "YesilGezegenTeknoloji",
     "Audience": "OunoRentUsers",
     "Key": "s30HyuwyzZBiQtUBN8bWuFZVyO3SwXyw",
-    "ExpireTime": "30"
+    "ExpireTime": "30",
+    "SlidingExpireTime": "4"
   }
 }
